# cram_ropha_demo

./: CMakeLists.txt  LICENSE  cram-ropha-demo.asd  package.xml
src/: #demo.lisp#  action-designator.lisp  action.lisp  costmaps.lisp  data-generation-plan.lisp  data-generation-script.lisp  demo.lisp  evaluation-plan.lisp  package.lisp  projection-demo.lisp  setup.lisp
