<package format="2">
  <name>cram_ropha_demo</name>
  <version>0.8.0</version>
  <description>Demo code for Ropha demo</description>
  <author>Michael Neumann</author>
  <maintainer email="neumann.michael@cs.uni-bremen.de">Michael Neumann</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://cram-system.org</url> -->
  <!-- <url type="repository">http://github.com/cram2/cram_projection_demos</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cram_pr2_pick_place_demo</depend>
  <depend>cram_urobosim</depend>
  <depend>cram_avatar</depend>

</package>
